--- a/index.html
+++ b/index.html
@@ -9,6 +9,50 @@
   <body>
     <h2>Esercizio 1</h2>
     <ul id="listaUser"></ul>
+
+    <h2>Esercizio 2</h2>
+    <div>
+      <h3>Inserisci Animale</h3>
+      <form id="aggiungiForm">
+        <label for="petName">Nome Animale </label>
+        <input
+          type="text"
+          name="petName"
+          id="petName"
+          placeholder="Nome Animale"
+          required
+        />
+
+        <label for="ownerName">Nome Proprietario</label>
+        <input
+          type="text"
+          name="ownerName"
+          id="ownerName"
+          placeholder="Nome Proprietario"
+          required
+        />
+
+        <label for="species">Specie</label>
+        <input
+          type="text"
+          name="species"
+          id="species"
+          placeholder="Specie Animale"
+          required
+        />
+        <label for="breed">Razza</label>
+        <input
+          type="text"
+          name="breed"
+          id="breed"
+          placeholder="Razza Animale"
+          required
+        />
+        <button type="submit">Aggiungi Animale</button>
+      </form>
+      <h3>Lista Animali</h3>
+      <div id="listaAnimali"></div>
+    </div>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
